--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="./boxicons-master/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./asset/css/grid.css">
-  
+  <style>
+  .content{
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/asset/img/background.jpg");
+  }
+</style>
 
 </head>
 <body>
