--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <link rel="stylesheet" href="./boxicons-master/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./asset/css/grid.css">
-  <style>
-  .content{
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/asset/img/background.jpg");
-  }
-</style>
 
 </head>
 <body>
@@ -46,7 +41,7 @@
                 </ul>
               
           </nav>
-          <div class="content col c-10">
+          <div style="background-image: url('./asset/img/background.jpg');" class="content col c-10">
             
             <div class="category wow slideInRight" >
               <div class="heading ">
