--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
               
           </nav>
-          <div style="background-image: url('./asset/img/background.jpg');" class="content col c-10">
+          <div style="background-image: url('./asset/img/background.jpg');  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));" class="content col c-10">
             
             <div class="category wow slideInRight" >
               <div class="heading ">
